; ModuleID = '/home/carl/AnghaBench/jq/src/extr_execute.c_ret_follows.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_execute.c_ret_follows.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RET = common dso_local global i64 0, align 8
@JUMP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*)* @ret_follows to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ret_follows(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  %4 = load i64*, i64** %3, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @RET, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %23

9:                                                ; preds = %1
  %10 = load i64*, i64** %3, align 8
  %11 = getelementptr inbounds i64, i64* %10, i32 1
  store i64* %11, i64** %3, align 8
  %12 = load i64, i64* %10, align 8
  %13 = load i64, i64* @JUMP, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %23

16:                                               ; preds = %9
  %17 = load i64*, i64** %3, align 8
  %18 = load i64*, i64** %3, align 8
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i64, i64* %17, i64 %19
  %21 = getelementptr inbounds i64, i64* %20, i64 1
  %22 = call i32 @ret_follows(i64* %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %15, %8
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
